--- a/_layouts/frontpage.yml
+++ b/_layouts/frontpage.yml
@@ -2,6 +2,7 @@
 <!-- NAVBAR
 ================================================== -->
   <body>
+    <a href="https://github.com/unknown-horizons/unknown-horizons"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png" alt="Fork me on GitHub"></a>
     <div class="container">
 
     {% include navbar.ext %}
