Use different lektor version to fix ghpages deployment
It's an issue in lektor (see [1]). For an example configuration see [2].

Unfortunately there was no new release after the fix was merged.

[1] https://github.com/lektor/lektor/pull/240
[2] https://github.com/pybee/pybee.github.io/blob/lektor/.travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 language: python
 python: 2.7
+branches:
+  only:
+    - source
 cache:
   directories:
     - $HOME/.cache/pip
     - $HOME/.cache/lektor/builds
-install: "pip install Lektor"
+install:
+  - pip install git+https://github.com/singingwolfboy/lektor.git@fix-ghpages-https-deploy#egg=lektor
 script: "lektor build"
 deploy:
   provider: script
