use lastest lektor version

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,10 @@
 language: python
 python: 2.7
-branches:
-  only:
-    - source
 cache:
   directories:
     - $HOME/.cache/pip
     - $HOME/.cache/lektor/builds
-install:
-  - pip install git+https://github.com/singingwolfboy/lektor.git@fix-ghpages-https-deploy#egg=lektor
+install: "pip install Lektor"
 script: "lektor build"
 deploy:
   provider: script
