--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: python
-python: 2.7
+python: 3.8
 cache:
   directories:
     - $HOME/.cache/pip
     - $HOME/.cache/lektor/builds
-install: "pip install Lektor"
+install: "pip3 install Lektor"
 script: "lektor build"
 deploy:
   provider: script
